corrections contrastes

--- a/src/styles/APropos.scss
+++ b/src/styles/APropos.scss
@@ -11,7 +11,7 @@
       color: #2C3E50;
       font-size: 2rem;
       margin-bottom: 2rem;
-      border-bottom: 2px solid #E74C3C;//déco titre
+      border-bottom: 2px solid #C0392B;//déco titre
       padding-bottom: 0.5rem;
     }
   }
