--- a/src/styles/Accueil.scss
+++ b/src/styles/Accueil.scss
@@ -32,7 +32,7 @@
   }
 
   &_AcLink {
-    background-color: #E74C3C;
+    background-color: #C0392B;
     color: #FFFFFF;
     padding: 0.8rem 2rem;
     border-radius: 4px;
