--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -11,7 +11,7 @@
       color: #2C3E50;
       font-size: 2rem;
       margin-bottom: 2rem;
-      border-bottom: 2px solid #E74C3C;
+      border-bottom: 2px solid #C0392B;
       padding-bottom: 0.5rem;
     }
   }
@@ -46,7 +46,7 @@
   }
 
   .contact_bouton {//Ciblage bouton MUI
-    background-color: #E74C3C;
+    background-color: #C0392B;
     color: #FFFFFF;
     padding: 0.8rem 2rem;
     border-radius: 4px;
