--- a/src/styles/ProjetDetail.scss
+++ b/src/styles/ProjetDetail.scss
@@ -11,7 +11,7 @@
       color: #2C3E50;
       font-size: 2rem;
       margin-bottom: 1rem;
-      border-bottom: 2px solid #E74C3C;
+      border-bottom: 2px solid #C0392B;
       padding-bottom: 0.5rem;
     }
   }
@@ -53,7 +53,7 @@
     margin-top: 2rem;
 
     a {//Style pour liens
-      color: #E74C3C;
+      color: #C0392B;
       font-weight: 600;
 
       &:hover {
