--- a/src/styles/Projets.scss
+++ b/src/styles/Projets.scss
@@ -11,7 +11,7 @@
       color: #2C3E50;
       font-size: 2rem;
       margin-bottom: 2rem;
-      border-bottom: 2px solid #E74C3C;
+      border-bottom: 2px solid #C0392B;
       padding-bottom: 0.5rem;
     }
   }
@@ -42,7 +42,7 @@
   }
 
   a {//Style lien GitHub
-    color: #E74C3C;
+    color: #C0392B;
     font-weight: 600;
 
     &:hover {
